// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio generates a label if a child prop of text is supplied 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "display": "flex",
    }
  }
>
  <div
    data-radium={true}
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <img
      alt=""
      data-radium={true}
      src="test-file-stub"
      style={
        Object {
          "height": 22,
          "width": 22,
        }
      }
      tabIndex="-1"
    />
    <input
      aria-label={undefined}
      checked={false}
      data-radium={true}
      id={1}
      onClick={[Function]}
      style={
        Object {
          "MozAppearance": "none",
          "MsAppearance": "none",
          "WebkitAppearance": "none",
          "appearance": "none",
          "height": 22,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 22,
        }
      }
      type="radio"
      value={undefined}
    />
  </div>
  <label
    data-radium={true}
    htmlFor={1}
    style={
      Object {
        "marginLeft": 10,
      }
    }
  >
    Test label
  </label>
</div>
`;

exports[`Radio incorporates user styles if passed 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "background": "pink",
      "display": "flex",
    }
  }
>
  <div
    data-radium={true}
    style={
      Object {
        "border": "2px solid purple",
        "position": "relative",
      }
    }
  >
    <img
      alt=""
      data-radium={true}
      src="test-file-stub"
      style={
        Object {
          "height": 22,
          "width": 22,
        }
      }
      tabIndex="-1"
    />
    <input
      aria-label={undefined}
      checked={false}
      data-radium={true}
      id={1}
      onClick={[Function]}
      style={
        Object {
          "MozAppearance": "none",
          "MsAppearance": "none",
          "WebkitAppearance": "none",
          "appearance": "none",
          "height": 22,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 22,
        }
      }
      type="radio"
      value={undefined}
    />
  </div>
  <label
    data-radium={true}
    htmlFor={1}
    style={
      Object {
        "color": "green",
        "marginLeft": 10,
      }
    }
  >
    Test label
  </label>
</div>
`;

exports[`Radio incorporates user styles if passed 2`] = `
<div
  data-radium={true}
  style={
    Object {
      "display": "flex",
    }
  }
>
  <div
    data-radium={true}
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <img
      alt=""
      data-radium={true}
      src="test-file-stub"
      style={
        Object {
          "height": 22,
          "width": 22,
        }
      }
      tabIndex="-1"
    />
    <input
      aria-label={undefined}
      checked={false}
      data-radium={true}
      id={2}
      onClick={[Function]}
      style={
        Object {
          "MozAppearance": "none",
          "MsAppearance": "none",
          "WebkitAppearance": "none",
          "appearance": "none",
          "height": 22,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 22,
        }
      }
      type="radio"
      value={undefined}
    />
  </div>
  <label
    data-radium={true}
    htmlFor={2}
    style={
      Object {
        "marginLeft": 10,
      }
    }
  >
    Test label
  </label>
</div>
`;

exports[`Radio renders the correct button type 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "position": "relative",
    }
  }
>
  <img
    alt=""
    data-radium={true}
    src="test-file-stub"
    style={
      Object {
        "height": 22,
        "width": 22,
      }
    }
    tabIndex="-1"
  />
  <input
    aria-label={undefined}
    checked={false}
    data-radium={true}
    id={1}
    onClick={[Function]}
    style={
      Object {
        "MozAppearance": "none",
        "MsAppearance": "none",
        "WebkitAppearance": "none",
        "appearance": "none",
        "height": 22,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 22,
      }
    }
    type="radio"
    value={undefined}
  />
</div>
`;

exports[`Radio renders the correct selected state 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "position": "relative",
    }
  }
>
  <img
    alt=""
    data-radium={true}
    src="test-file-stub"
    style={
      Object {
        "height": 22,
        "width": 22,
      }
    }
    tabIndex="-1"
  />
  <input
    aria-label={undefined}
    checked={false}
    data-radium={true}
    id={1}
    onClick={[Function]}
    style={
      Object {
        "MozAppearance": "none",
        "MsAppearance": "none",
        "WebkitAppearance": "none",
        "appearance": "none",
        "height": 22,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 22,
      }
    }
    type="radio"
    value={undefined}
  />
</div>
`;

exports[`Radio renders the correct selected state 2`] = `
<div
  data-radium={true}
  style={
    Object {
      "position": "relative",
    }
  }
>
  <img
    alt=""
    data-radium={true}
    src="test-file-stub"
    style={
      Object {
        "height": 22,
        "width": 22,
      }
    }
    tabIndex="-1"
  />
  <input
    aria-label={undefined}
    checked={true}
    data-radium={true}
    id={2}
    onClick={[Function]}
    style={
      Object {
        "MozAppearance": "none",
        "MsAppearance": "none",
        "WebkitAppearance": "none",
        "appearance": "none",
        "height": 22,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 22,
      }
    }
    type="radio"
    value={undefined}
  />
</div>
`;

exports[`Radio renders the correct selected state 3`] = `
<div
  data-radium={true}
  style={
    Object {
      "position": "relative",
    }
  }
>
  <img
    alt=""
    data-radium={true}
    src="test-file-stub"
    style={
      Object {
        "height": 22,
        "width": 22,
      }
    }
    tabIndex="-1"
  />
  <input
    aria-label={undefined}
    checked={true}
    data-radium={true}
    disabled={true}
    id={2}
    onClick={[Function]}
    style={
      Object {
        "MozAppearance": "none",
        "MsAppearance": "none",
        "WebkitAppearance": "none",
        "appearance": "none",
        "height": 22,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 22,
      }
    }
    type="radio"
    value={undefined}
  />
</div>
`;
